# Inrix---Multivariable-Traffic-Forecast---2026-03-23

.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-data-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-forecasting-model/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-api-layer/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/data/: events.json  sfusd-calendar.csv
backend/src/: server.ts  worker.ts
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
ml/: pyproject.toml  requirements.txt
ml/scripts/: backfill_baseline.py  run_forecast.py  train_model.py
ml/src/: baseline.py  confidence.py  config.py  corridors.py  db.py  features.py  forecast.py  model.py
ml/tests/: conftest.py  test_baseline.py  test_confidence.py  test_features.py  test_forecast.py  test_model.py
(+99 files in other folders)
